# Tagg

./: Cargo.toml  README.md
src/: config.rs  main.rs  state.rs  storage.rs  tagg.rs  util.rs
src/commands/: list_all.rs  mod.rs
