[package]
name = "tagg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
eyre = "0.6.8"
inquire = "0.5.2"
open = "3.2.0"
serde = { version = "1.0.147", features = ["derive"] }
termcolor = "1.1.3"
toml = "0.5.9"
trash = "2.1.5"
uuid = { version = "1.2.2", features = ["v4"] }
